--- a/usermanga/templates/add_manga.html
+++ b/usermanga/templates/add_manga.html
@@ -65,37 +65,10 @@
 
 <div class="wrapper">
     <!-- HEADER -->
-    <header>
-        <div class="netflixLogo">
-            <a id="logo" class="navbar-brand" href="{% url 'Manga:index' %}"><img src="{% static 'img/logo.png' %}"
-                                                                                  alt="MyManga logo"></a>
-        </div>
-        <nav class="main-nav row">
-            <div class="my-auto p-3">
-                <a href="{% url 'Manga:index' %}">Trang chủ</a>
-                <a href="#">Thể loại</a>
-                <a href="#">Gần đây</a>
-                <a href="#">Hot</a>
-                <a href="#">Tất cả</a>
-            </div>
-        </nav>
-        <nav class="sub-nav row">
-            <div class="my-auto">
-                <a href="#"><i class="fas fa-search sub-nav-logo"></i></a>
-                <a href="#"><i class="fas fa-bell sub-nav-logo"></i></a>
-                {% if request.user.is_authenticated %}
-                    <a href="{% url 'authentication:home' %}">{{ request.user }}</a>
-                    <a href="{% url 'authentication:logout' %}"><i class="fas fa-power-off sub-nav-logo"></i> Đăng xuất</a>
-                {% else %}
-                    <a href="{% url 'authentication:register' %}">Đăng ký</a>
-                    <a href="{% url 'authentication:login' %}">Đăng nhập</a>
-                {% endif %}
-            </div>
-        </nav>
-    </header>
+    {% include 'header.html' %}
 
-    <div class="container">
-        <h1>Edit Profile</h1>
+    <div class="main-container">
+        <h1>Thêm truyện</h1>
         <hr>
         <div class="row">
             <!-- left column -->
@@ -109,36 +82,36 @@
 
             <!-- edit form column -->
             <div class="col-md-9 personal-info">
-                <h3>Manga info</h3>
+                <h3>Thông tin truyện</h3>
 
                 <form method="post" class="form-horizontal" role="form" onsubmit="setImg()">
                     {% csrf_token %}
                     <div class="form-group">
-                        <label class="col-lg-3 control-label">Name:</label>
+                        <label class="col-lg-3 control-label">Tên truyện: </label>
                         <div class="col-lg-8">
                             <input class="form-control" type="text" id="name" name="name" required>
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-lg-3 control-label">Author:</label>
+                        <label class="col-lg-3 control-label">Tác giả:</label>
                         <div class="col-lg-8">
                             <input class="form-control" type="text" id="author" name="author" required>
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-lg-3 control-label">Description:</label>
+                        <label class="col-lg-3 control-label">Mô tả:</label>
                         <div class="col-lg-8">
                             <input class="form-control" type="text" id="description" name="description" required>
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-lg-3 control-label">Status:</label>
+                        <label class="col-lg-3 control-label">Trạng thái:</label>
                         <div class="col-lg-8">
                             <input class="form-control" type="text" id="status" name="status" required>
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-lg-3 control-label">Category:</label>
+                        <label class="col-lg-3 control-label">Thể loại:</label>
                         <div class="col-lg-8">
                             <div class="ui-select">
                                 <select class="form-control selectpicker" id="category" name="category" multiple aria-label="size 3 select example" required>
@@ -153,9 +126,9 @@
                     <div class="form-group">
                         <label class="col-md-3 control-label"></label>
                         <div class="col-md-8">
-                            <input type="submit" class="btn btn-primary" value="Save Changes">
+                            <input type="submit" class="btn btn-primary" value="Lưu ">
                             <span></span>
-                            <a href= "{% url "usermanga:home"  %}" class="btn btn-default">Cancel</a>
+                            <a href= "{% url "usermanga:home"  %}" class="btn btn-default">Quay về </a>
                         </div>
                     </div>
                 </form>
@@ -163,12 +136,7 @@
         </div>
     </div>
     <!-- FOOTER -->
-    <footer>
-        <p>&copy 2022 MyManga Django Project</p>
-        <p>Van Huu An - 19TCLC_DT3</p>
-        <p>Bui Kim Phat - 19TCLC_DT3</p>
-        <p>Dao Danh Thai</p>
-    </footer>
+     {% include 'footer.html' %}
 </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
