--- a/usermanga/templates/list_user_manga.html
+++ b/usermanga/templates/list_user_manga.html
@@ -14,34 +14,8 @@
 <body>
 <div class="wrapper">
     <!-- HEADER -->
-    <header>
-        <div class="netflixLogo">
-            <a id="logo" class="navbar-brand" href="{% url 'Manga:index' %}"><img src="{% static 'img/logo.png' %}"
-                                                                                  alt="MyManga logo"></a>
-        </div>
-        <nav class="main-nav row">
-            <div class="my-auto p-3">
-                <a href="{% url 'Manga:index' %}">Trang chủ</a>
-                <a href="#">Thể loại</a>
-                <a href="#">Gần đây</a>
-                <a href="#">Hot</a>
-                <a href="#">Tất cả</a>
-            </div>
-        </nav>
-        <nav class="sub-nav row">
-            <div class="my-auto">
-                <a href="#"><i class="fas fa-search sub-nav-logo"></i></a>
-                <a href="#"><i class="fas fa-bell sub-nav-logo"></i></a>
-                {% if request.user.is_authenticated %}
-                    <a href="{% url 'authentication:home' %}">{{ request.user }}</a>
-                    <a href="{% url 'authentication:logout' %}"><i class="fas fa-power-off sub-nav-logo"></i> Đăng xuất</a>
-                {% else %}
-                    <a href="{% url 'authentication:register' %}">Đăng ký</a>
-                    <a href="{% url 'authentication:login' %}">Đăng nhập</a>
-                {% endif %}
-            </div>
-        </nav>
-    </header>
+    <!-- HEADER -->
+    {% include 'header.html' %}
     <!-- END OF HEADER -->
 
     <!-- MAIN CONTAINER -->
@@ -60,18 +34,13 @@
             </div>
         </div>
         <hr class="my-4">
-        <a class="btn btn-primary btn-lg active" href="{% url 'usermanga:add' %}">Add new manga</a>
+        <a class="btn btn-primary btn-lg active" href="{% url 'usermanga:add' %}">Thêm truyện mới</a>
     </section>
 
     <!-- END OF MAIN CONTAINER -->
 
     <!-- FOOTER -->
-    <footer>
-        <p>&copy 2022 MyManga Django Project</p>
-        <p>Van Huu An - 19TCLC_DT3</p>
-        <p>Bui Kim Phat - 19TCLC_DT3</p>
-        <p>Dao Danh Thai</p>
-    </footer>
+     {% include 'footer.html' %}
 </div>
 </body>
 </html>
