--- a/Manga/templates/category.html
+++ b/Manga/templates/category.html
@@ -23,9 +23,9 @@
     {% include 'header.html' %}
     
     <!-- MAIN CONTAINER -->
-    <section class="main-container" >
+    <section class="container" >
       <div class="location" id="home">
-          <h1 id="home">Thể loại: {{category.category}}</h1>
+          <h1 class="my-4">Thể loại: {{category.category}}</h1>
           <div class="box">
             {% if all_manga %}
               {% for manga in all_manga %}
