--- a/usermanga/templates/add_chapter.html
+++ b/usermanga/templates/add_chapter.html
@@ -30,7 +30,7 @@
     <!-- END OF HEADER -->
 
     <!-- MAIN CONTAINER -->
-    <div class="main-container">
+    <div class="container">
         <h1>Thêm chapter cho truyện {{ manga.name }}</h1>
         <hr>
         <form method="post" class="form-horizontal" role="form" onsubmit="setImg()" action=" {% url "usermanga:create" %}">
