--- a/usermanga/templates/add_manga.html
+++ b/usermanga/templates/add_manga.html
@@ -67,7 +67,7 @@
     <!-- HEADER -->
     {% include 'header.html' %}
 
-    <div class="main-container">
+    <div class="container">
         <h1>Thêm truyện</h1>
         <hr>
         <div class="row">
