--- a/usermanga/templates/edit_manga.html
+++ b/usermanga/templates/edit_manga.html
@@ -69,7 +69,7 @@
     <!-- END OF HEADER -->
 
     <!-- MAIN CONTAINER -->
-    <div class="main-container">
+    <div class="container">
         <h1>Chỉnh sửa truyện</h1>
         <hr>
         <div class="row">
