--- a/usermanga/templates/list_user_manga.html
+++ b/usermanga/templates/list_user_manga.html
@@ -19,7 +19,7 @@
     <!-- END OF HEADER -->
 
     <!-- MAIN CONTAINER -->
-    <section class="main-container">
+    <section class="container">
         <div class="location" id="home">
             <h1>Truyện của bạn đã đăng</h1>
             <div class="box">
