--- a/Manga/static/history.css
+++ b/Manga/static/history.css
@@ -6,7 +6,7 @@
   }
   
   html, body {
-    width: 100vw;
+    width: 100%;
     min-height: 100vh;
     margin: 0;
     padding: 0;
@@ -42,38 +42,46 @@
     z-index: 100;
   }
   
-  .netflixLogo {
+  .myMangaLogo {
     grid-area: nt;
-    padding-left: 30px;
-    padding-top: 10px;  
-    padding-bottom: 10px;
   }
   
-  .netflixLogo img {  
+  .myMangaLogo img {  
     height: 70px; 
     width: 200px;   
     object-fit: cover; 
   }
   
   #logo {
-    color: #E50914;  
     margin: 0; 
     padding: 0; 
   }
   
+  #logo-alt {
+    display: none;
+  }
   
   .main-nav {
     grid-area: mn;
     padding: 0 30px 0 20px;
   }
+
+  .navbar-fixed-top {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 696;
+  }
   
-  .main-nav a {
+  
+  .navbar a {
     color: var(--light);
     text-decoration: none;
     margin: 5px;  
   }
   
-  .main-nav a:hover {
+  .navbar a:hover {
     color: var(--dark);
   }
   
@@ -94,8 +102,8 @@
   
   
   /* MAIN CONTIANER */
-  .main-container {
-    padding: 100px;
+  .container {
+    padding-top: 100px;
   }
   
   .box {
@@ -192,6 +200,13 @@
   }
   
   @media(max-width: 700px) {
+
+    #logo {
+      display: none;  
+    }
+    #logo-alt {
+      display: inline;
+    }
   
     header {
       display: grid;
@@ -291,7 +306,7 @@
   display: flex;
   justify-content: center;
 }
-.table{
+/* .table{
   width: 70%;
   max-width: 80%;
-}
+} */
