--- a/Manga/templates/history.html
+++ b/Manga/templates/history.html
@@ -12,6 +12,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   
   <link rel="stylesheet" href="{% static 'history.css' %}">
+  
   <script>
     $(function () {
       $('[data-toggle="tooltip"]').tooltip()
@@ -23,9 +24,9 @@
     {% include 'header.html' %}
     
     <!-- MAIN CONTAINER -->
-    <section class="main-container" >
+    <section class="container" >
       <div class="location" id="home">
-          <h1 id="home" >Lịch sử đọc truyện gần nhất</h1>
+          <h1 class="my-4">Lịch sử đọc truyện gần nhất</h1>
           <div class="list"> 
             <table class="table" >
                 <thead class="thead-dark">
