--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,278 +1,318 @@
 /* CSS VARIABLES */
 :root {
-    --primary: #141414;
-    --light: #F3F3F3;
-    --dark: 	#686868;
-  }
-  
-  html, body {
-    width: 100vw;
-    min-height: 100vh;
-    margin: 0;
-    padding: 0;
-    background-color: var(--primary);
-    color: var(--light);
-    font-family: Arial, Helvetica, sans-serif;
-    box-sizing: border-box;
-    line-height: 1.4;
-  }
-  
-  img {
-    max-width: 100%;
-  }
-  
-  .wrapper {
-    margin: 0;
-    padding: 0;
-  }
-  
-  /* HEADER */
+  --primary: #141414;
+  --light: #F3F3F3;
+  --dark: 	#686868;
+  --link: #83a9cb;
+}
+
+html, body {
+  width: 100%;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  background-color: var(--primary);
+  color: var(--light);
+  font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
+  line-height: 1.4;
+}
+
+img {
+  max-width: 100%;
+}
+
+.wrapper {
+  margin: 0;
+  padding: 0;
+}
+
+/* HEADER */
+header {
+  padding: 0 20px 0 20px;
+  position: fixed;
+  top: 0;
+  display: grid;  
+  grid-gap:5px;
+  grid-template-columns: 1fr 4fr 1fr;
+  grid-template-areas: 
+    "nt mn mn sb . . . "; 
+  background-color: var(--primary);
+  width: 100%;
+  margin-bottom: 0px;  
+  z-index: 100;
+}
+
+.myMangaLogo {
+  grid-area: nt;
+}
+
+.myMangaLogo img {  
+  height: 70px; 
+  width: 200px;   
+  object-fit: cover; 
+}
+
+#logo {
+  margin: 0; 
+  padding: 0; 
+}
+
+#logo-alt {
+  display: none;
+}
+
+.main-nav {
+  grid-area: mn;
+  padding: 0 30px 0 20px;
+}
+
+.navbar-fixed-top {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 696;
+}
+
+.navbar a {
+  color: var(--light);
+  text-decoration: none;
+  margin: 5px;  
+}
+
+.navbar a:hover {
+  color: var(--dark);
+}
+
+.sub-nav {
+  grid-area: sb;
+  padding: 0 40px 0 40px;
+}
+
+.sub-nav a {
+  color: var(--light);
+  text-decoration: none;
+  margin: 5px;
+}
+
+.sub-nav a:hover {
+  color: var(--dark);
+}
+
+.dropdown-menu a:hover {
+  color: var(--link);
+}
+
+.dropdown {
+  vertical-align: middle;
+}
+
+/* MAIN CONTIANER */
+.container {
+  padding-top: 100px;
+}
+
+.box {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(6, minmax(100px, 1fr));
+}
+
+.box a {
+  transition: transform .3s;  
+}
+
+.box a:hover {
+  transition: transform .3s;
+  -ms-transform: scale(1.4);
+  -webkit-transform: scale(1.4);  
+  transform: scale(1.4);
+}
+
+.box img {
+  border-radius: 4px;
+  height: 230px;
+  width: 175px;
+}
+
+.tooltip-inner {
+  max-width: 350px !important;
+}
+
+.dropdown-menu {
+  background-color: var(--dark);
+  color: var(--light);
+  width: 40vw;
+}
+/* LINKS */
+a {
+  color: var(--link);
+}
+.link {
+  padding: 50px;
+}
+
+.sub-links ul {
+  list-style: none;
+  padding: 0;
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.sub-links a {
+  color: var(--dark);
+  text-decoration: none;
+}
+
+.sub-links a:hover {
+  color: var(--dark);
+  text-decoration: underline;
+}
+
+.logos a{
+  padding: 10px;
+}
+
+.logo {
+  color: var(--dark);
+}
+
+
+/* FOOTER */
+footer {
+  padding: 20px;
+  text-align: center;
+  color: var(--dark);
+  margin: 10px;
+}
+
+/* MEDIA QUERIES */
+
+@media(max-width: 900px) {
+
   header {
-    padding: 0 20px 0 20px;
-    position: fixed;
-    top: 0;
-    display: grid;  
-    grid-gap:5px;
-    grid-template-columns: 1fr 4fr 1fr;
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(2, 1fr);
     grid-template-areas: 
-      "nt mn mn sb . . . "; 
-    background-color: var(--primary);
-    width: 100%;
-    margin-bottom: 0px;  
-    z-index: 100;
+    "nt nt nt  .  .  . sb . . . "
+    "mn mn mn mn mn mn  mn mn mn mn";
   }
-  
-  .netflixLogo {
-    grid-area: nt;
-    padding-left: 30px;
-    padding-top: 10px;  
-    padding-bottom: 10px;
-  }
-  
-  .netflixLogo img {  
-    height: 70px; 
-    width: 200px;   
-    object-fit: cover; 
-  }
-  
-  #logo {
-    color: #E50914;  
-    margin: 0; 
-    padding: 0; 
-  }
-  
-  
-  .main-nav {
-    grid-area: mn;
-    padding: 0 30px 0 20px;
-  }
-  
-  .main-nav a {
-    color: var(--light);
-    text-decoration: none;
-    margin: 5px;  
-  }
-  
-  .main-nav a:hover {
-    color: var(--dark);
-  }
-  
-  .sub-nav {
-    grid-area: sb;
-    padding: 0 40px 0 40px;
-  }
-  
-  .sub-nav a {
-    color: var(--light);
-    text-decoration: none;
-    margin: 5px;
-  }
-  
-  .sub-nav a:hover {
-    color: var(--dark);
-  }
-  
-  
-  /* MAIN CONTIANER */
-  .main-container {
-    padding: 100px;
-  }
-  
+
   .box {
     display: grid;
     grid-gap: 20px;
-    grid-template-columns: repeat(6, minmax(100px, 1fr));
-  }
-  
-  .box a {
-    transition: transform .3s;  
-  }
-  
-  .box a:hover {
-    transition: transform .3s;
-    -ms-transform: scale(1.4);
-    -webkit-transform: scale(1.4);  
-    transform: scale(1.4);
-  }
-  
-  .box img {
-    border-radius: 4px;
-    height: 230px;
-    width: 175px;
+    grid-template-columns: repeat(4, minmax(100px, 1fr));
   }
 
-  /* LINKS */
-  .link {
-    padding: 50px;
+}
+
+@media(max-width: 700px) {
+
+  #logo {
+    display: none;  
   }
-  
-  .sub-links ul {
-    list-style: none;
-    padding: 0;
+  #logo-alt {
+    display: inline;
+  }
+
+  header {
     display: grid;
     grid-gap: 20px;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: 
+    "nt nt nt  .  .  . sb . . . "
+    "mn mn mn mn mn mn  mn mn mn mn";
   }
-  
-  .sub-links a {
-    color: var(--dark);
-    text-decoration: none;
+
+  .box {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(3, minmax(100px, 1fr));
   }
-  
-  .sub-links a:hover {
-    color: var(--dark);
-    text-decoration: underline;
+
+  .sub-links ul {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(3, 1fr);
   }
-  
-  .logos a{
-    padding: 10px;
-  }
-  
-  .logo {
-    color: var(--dark);
-  }
-  
-  
-  /* FOOTER */
-  footer {
-    padding: 20px;
-    text-align: center;
-    color: var(--dark);
-    margin: 10px;
-  }
-  
-  /* MEDIA QUERIES */
-  
-  @media(max-width: 900px) {
-  
-    header {
-      display: grid;
-      grid-gap: 20px;
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-areas: 
-      "nt nt nt  .  .  . sb . . . "
-      "mn mn mn mn mn mn  mn mn mn mn";
-    }
-  
-    .box {
-      display: grid;
-      grid-gap: 20px;
-      grid-template-columns: repeat(4, minmax(100px, 1fr));
-    }
-  
-  }
-  
-  @media(max-width: 700px) {
-  
-    header {
-      display: grid;
-      grid-gap: 20px;
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-areas: 
-      "nt nt nt  .  .  . sb . . . "
-      "mn mn mn mn mn mn  mn mn mn mn";
-    }
-  
-    .box {
-      display: grid;
-      grid-gap: 20px;
-      grid-template-columns: repeat(3, minmax(100px, 1fr));
-    }
-  
-    .sub-links ul {
-      display: grid;
-      grid-gap: 20px;
-      grid-template-columns: repeat(3, 1fr);
-    }
-      
-  }
-  
-  @media(max-width: 500px) {
-  
-    .wrapper {
-      font-size: 15px;
-    }
-  
-    header {
-      margin: 0;
-      padding: 20px 0 0 0;
-      position: static;
-      display: grid;
-      grid-gap: 20px;
-      grid-template-columns: repeat(1, 1fr);
-      grid-template-areas: 
-      "nt"    
-      "mn"
-      "sb";
-      text-align: center;
-    }
-  
-    .netflixLogo {
-      max-width: 100%;
-      margin: auto;
-      padding-right: 20px;
-    }
-  
-    .main-nav {
-      display: grid;
-      grid-gap: 0px;
-      grid-template-columns: repeat(1, 1fr);
-      text-align: center;
-    }
-  
-    h1 {
-      text-align: center;
-      font-size: 18px;
-    }
-  
     
-  
-    .box {
-      display: grid;
-      grid-gap: 20px;
-      grid-template-columns: repeat(1, 1fr);
-      text-align: center;    
-    }
-  
-    .box a:hover {
-      transition: transform .3s;
-      -ms-transform: scale(1);
-      -webkit-transform: scale(1);  
-      transform: scale(1.2);
-    }
-  
-    .logos {
-      display: grid;
-      grid-gap: 20px;
-      grid-template-columns: repeat(2, 1fr);
-      text-align: center;
-    }
-  
-    .sub-links ul {
-      display: grid;
-      grid-gap: 20px;
-      grid-template-columns: repeat(1, 1fr);
-      text-align: center;
-      font-size: 15px;
-    }  
+}
+
+@media(max-width: 500px) {
+
+  .wrapper {
+    font-size: 15px;
   }
+
+  header {
+    margin: 0;
+    padding: 20px 0 0 0;
+    position: static;
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-areas: 
+    "nt"    
+    "mn"
+    "sb";
+    text-align: center;
+  }
+
+  .myMangaLogo {
+    max-width: 100%;
+    margin: auto;
+    padding-right: 20px;
+  }
+
+  .main-nav {
+    display: grid;
+    grid-gap: 0px;
+    grid-template-columns: repeat(1, 1fr);
+    text-align: center;
+  }
+
+  h1 {
+    text-align: center;
+    font-size: 18px;
+  }
+
+  
+
+  .box {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(1, 1fr);
+    text-align: center;    
+  }
+
+  .box a:hover {
+    transition: transform .3s;
+    -ms-transform: scale(1);
+    -webkit-transform: scale(1);  
+    transform: scale(1.2);
+  }
+
+  .logos {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(2, 1fr);
+    text-align: center;
+  }
+
+  .sub-links ul {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(1, 1fr);
+    text-align: center;
+    font-size: 15px;
+  }  
+}
+
+.list {
+margin-top: 100px;
+display: flex;
+justify-content: center;
+}
