--- a/usermanga/templates/base.html
+++ b/usermanga/templates/base.html
@@ -14,34 +14,7 @@
 <body>
 <div class="wrapper">
     <!-- HEADER -->
-    <header>
-        <div class="netflixLogo">
-            <a id="logo" class="navbar-brand" href="{% url 'Manga:index' %}"><img src="{% static 'img/logo.png' %}"
-                                                                                  alt="MyManga logo"></a>
-        </div>
-        <nav class="main-nav row">
-            <div class="my-auto p-3">
-                <a href="{% url 'Manga:index' %}">Trang chủ</a>
-                <a href="#">Thể loại</a>
-                <a href="#">Gần đây</a>
-                <a href="#">Hot</a>
-                <a href="#">Tất cả</a>
-            </div>
-        </nav>
-        <nav class="sub-nav row">
-            <div class="my-auto">
-                <a href="#"><i class="fas fa-search sub-nav-logo"></i></a>
-                <a href="#"><i class="fas fa-bell sub-nav-logo"></i></a>
-                {% if request.user.is_authenticated %}
-                    <a href="{% url 'authentication:home' %}">{{ request.user }}</a>
-                    <a href="{% url 'authentication:logout' %}"><i class="fas fa-power-off sub-nav-logo"></i> Đăng xuất</a>
-                {% else %}
-                    <a href="{% url 'authentication:register' %}">Đăng ký</a>
-                    <a href="{% url 'authentication:login' %}">Đăng nhập</a>
-                {% endif %}
-            </div>
-        </nav>
-    </header>
+    {% include 'header.html' %}
 </div>
 </body>
 </html>
