--- a/usermanga/templates/edit_manga.html
+++ b/usermanga/templates/edit_manga.html
@@ -91,25 +91,25 @@
                     <div class="form-group">
                         <label class="col-lg-3 control-label">Tên truyện :</label>
                         <div class="col-lg-8">
-                            <input class="form-control" type="text" id="name" name="name" required value={{ manga.name }} >
+                            <input class="form-control" type="text" id="name" name="name" required value="{{ manga.name }}" >
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-lg-3 control-label">Tác giả :</label>
                         <div class="col-lg-8">
-                            <input class="form-control" type="text" id="author" name="author" required value={{ manga.author }}>
+                            <input class="form-control" type="text" id="author" name="author" required value="{{ manga.author }}">
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-lg-3 control-label">Tóm tắt:</label>
                         <div class="col-lg-8">
-                            <input class="form-control" type="text" id="description" name="description" required value={{ manga.description }}>
+                            <input class="form-control" type="text" id="description" name="description" required value="{{ manga.summary }}">
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-lg-3 control-label">Trạng thái :</label>
                         <div class="col-lg-8">
-                            <input class="form-control" type="text" id="status" name="status" required value={{ manga.status }}>
+                            <input class="form-control" type="text" id="status" name="status" required value="{{ manga.status }}">
                         </div>
                     </div>
                     <div class="form-group">
