--- a/usermanga/templates/add_manga.html
+++ b/usermanga/templates/add_manga.html
@@ -126,7 +126,7 @@
                     <div class="form-group">
                         <label class="col-md-3 control-label"></label>
                         <div class="col-md-8">
-                            <input type="submit" class="btn btn-primary" value="Lưu ">
+                            <input type="submit" id="submitBtn" class="btn btn-primary" value="Lưu ">
                             <span></span>
                             <a href= "{% url "usermanga:home"  %}" class="btn btn-default">Quay về </a>
                         </div>
